--- a/Templates/main_page.html
+++ b/Templates/main_page.html
@@ -23,8 +23,8 @@
             <a href="/motivation/{{user_id}}">Motivation</a>
             <a href="#">Personal difficulty</a>
             <a href="#">Completion</a>
-            <a href="#">Workout type</a>
-            <a href="#">Total workout time</a>
+            <a href="/workout_types/{{user_id}}">Workout type</a>
+            <a href="/total_workout_time/{{user_id}}">Total workout time</a>
           </div>
         </div>
     </body>
