--- a/Templates/my_schedule.html
+++ b/Templates/my_schedule.html
@@ -31,6 +31,7 @@
                         '  NOT_FOR_ME - 7');
                     var motivation = prompt('Describe your motivation level 0-100 or more!:');
                     var event_startStr = info.event.startStr;
+                    //check if report for this event is already in database
                     var event_date = event_startStr.substring(0, 10);
                     alert('GREAT!\nREPORT IS DONE');
                      // update database
