--- a/Templates/workout_Types.html
+++ b/Templates/workout_Types.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Total workout time Graph</title>
+    <title>workout Type Pie</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 </head>
 <body>
@@ -10,19 +10,23 @@
     <br><br><br>
     <caption><h2> Here is your Graph: </h2></caption>
     <br><br>
-    <div id="total_time_graph">
-        <canvas id="myTotalTimeChart" width="700" height="300"></canvas>
+    <div id="workout_types">
+        <canvas id="workout_types_pie" width="700" height="300"></canvas>
         <script>
-            var ctx = document.getElementById("myTotalTimeChart").getContext("2d");
+            var ctx = document.getElementById("workout_types_pie").getContext("2d");
             var pieChart = new Chart(ctx, {
-                type: "bar",
+                type: "pie",
                 data:{
-                    labels:{{labels1 | safe}},
+                    labels:{{labels | safe}},
                     datasets:[{
-                        label:"Total workout time",
-                        data: {{values1|safe}},
+                        label:"Workout types",
+                        data: {{values |safe}},
                         //fill: false,
                         backgroundColor: [
+                            'rgb(255, 99, 132)',
+                            'rgb(54, 162, 235)',
+                            'rgb(255, 205, 86)',
+                            'rgb(255, 159, 64)',
                           'rgba(255, 99, 132, 0.2)',
                           'rgba(255, 159, 64, 0.2)',
                           'rgba(255, 205, 86, 0.2)',
@@ -31,22 +35,10 @@
                           'rgba(153, 102, 255, 0.2)',
                           'rgba(201, 203, 207, 0.2)'
                         ],
-                        borderColor: [
-                          'rgb(255, 99, 132)',
-                          'rgb(255, 159, 64)',
-                          'rgb(255, 205, 86)',
-                          'rgb(75, 192, 192)',
-                          'rgb(54, 162, 235)',
-                          'rgb(153, 102, 255)',
-                          'rgb(201, 203, 207)'
-                        ],
-                        borderWidth: 2
                             }]
                     }
                 });
         </script>
     </div>
-    <br><br><br>
-    <caption><h2> {{notice}} </h2></caption>
 </body>
 </html>
