Fill report only ones

--- a/Templates/main_page.html
+++ b/Templates/main_page.html
@@ -27,5 +27,17 @@
             <a href="/total_workout_time/{{user_id}}">Total workout time</a>
           </div>
         </div>
+
+        <div class="dropdown">
+          <button class="drop_btn">Show my monthly progress</button>
+          <div class="dropdown-content">
+            <a href="/motivation-month/{{user_id}}">Motivation</a>
+            <a href="#">Personal difficulty</a>
+            <a href="#">Completion</a>
+            <a href="/workout_types-month/{{user_id}}">Workout type</a>
+            <a href="/total_workout_time-month/{{user_id}}">Total workout time</a>
+          </div>
+        </div>
+
     </body>
 </html>
