--- a/Templates/my_schedule.html
+++ b/Templates/my_schedule.html
@@ -6,6 +6,7 @@
         <title>Weekly Schedule</title>
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.css"  />
          <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.js"></script>
+
     </head>
     <body>
         <p> Hello {{value}} !</p>
@@ -13,39 +14,77 @@
         <caption><h2> Here is your schedule: </h2></caption>
         <br><br>
         <div id="calendar"></div>
+
         <script>
 
             let calendarEl = document.getElementById('calendar');
             let calendar = new FullCalendar.Calendar(calendarEl,{
                 initialView: 'dayGridMonth',
-
                 eventClick: function(info) {
-                    var comp = prompt('WORKOUT REPORT:\n'+'Please enter workout completion in %');
-                    var diff = prompt('Describe your personal difficulty: \n'+'TOO_EASY - 0,\n' +
-                        '  EASY -1,\n' +
-                        '  JUST_RIGHT - 2,\n' +
-                        '  GOOD_CHALLENGE - 3,\n' +
-                        '  TOUGH_BUT_POSSIBLE - 4,\n' +
-                        '  VERY_TOUGH - 5,\n' +
-                        '  ALMOST_IMPOSSIBLE - 6,   \n' +
-                        '  NOT_FOR_ME - 7');
-                    var motivation = prompt('Describe your motivation level 0-100 or more!:');
-                    var event_startStr = info.event.startStr;
                     //check if report for this event is already in database
-                    var event_date = event_startStr.substring(0, 10);
-                    alert('GREAT!\nREPORT IS DONE');
-                     // update database
-                    var xhr = new XMLHttpRequest();
+
+                    var event_date = info.event.startStr;
+                    //var event_title= info.event.title;
                     var id = "{{value_id}}"
-                    xhr.open("POST", "/insert reports to DB", true);
+                    var xhr = new XMLHttpRequest();
+                    xhr.open("POST", "/check if reported", true);
                     xhr.setRequestHeader('Content-Type', 'application/json');
+                    var reported = 0;
+                    //send event details to server
                     xhr.send(JSON.stringify({
                         _id:id,
                         workout_date: event_date,
-                        personal_difficulty: diff,
-                        workout_completion: comp,
-                        motivation: motivation,
                     }));
+                    xhr.onreadystatechange = function () {
+                        if (xhr.readyState === xhr.DONE && xhr.status === 200) {
+                            reported = parseInt(xhr.responseText);
+                            if(reported){
+                                alert("Reported")
+                            }
+
+                            // check if request is Done
+                            if(!reported && (xhr.readyState==xhr.DONE)){
+                                var comp = prompt('WORKOUT REPORT:\n'+'Please enter workout completion in %');
+                                var diff = prompt('WORKOUT REPORT:\n'+'Describe your personal difficulty: \n'+'TOO_EASY - 0,\n' +
+                                    '  EASY -1,\n' +
+                                    '  JUST_RIGHT - 2,\n' +
+                                    '  GOOD_CHALLENGE - 3,\n' +
+                                    '  TOUGH_BUT_POSSIBLE - 4,\n' +
+                                    '  VERY_TOUGH - 5,\n' +
+                                    '  ALMOST_IMPOSSIBLE - 6,   \n' +
+                                    '  NOT_FOR_ME - 7');
+                                var motivation = prompt('WORKOUT REPORT:\n'+'Describe your motivation level 0-100 or more!:');
+                                 // update database
+                                var xhr2 = new XMLHttpRequest();
+                                xhr2.open("POST", "/insert reports to DB", true);
+                                xhr2.setRequestHeader('Content-Type', 'application/json');
+                                xhr2.send(JSON.stringify({
+                                    _id:id,
+                                    workout_date: event_date,
+                                    personal_difficulty: diff,
+                                    workout_completion: comp,
+                                    motivation: motivation,
+                                }));
+                                // waiting for server response to insert report
+                                xhr2.onreadystatechange = function () {
+                                    if (xhr2.readyState === xhr2.DONE && xhr2.status === 200) {
+                                        if(parseInt(xhr2.responseText)){
+                                            alert('GREAT!\nREPORT IS DONE');
+                                        }
+                                        else{
+                                            alert('There was an error');
+                                        }
+                                    }
+                                }
+/*
+                                        alert('GREAT!\nREPORT IS DONE');
+                                        if(reported){
+                                         alert("Reported")
+                                        }*/
+                                    }
+                                }
+                    }
+
                   },
                 // pull workouts from DB
                  events :[
@@ -71,6 +110,7 @@
                 var event_title =workoutname+" "+start
                 var date = new Date(dateStr + 'T00:00:00'); // will be in local time
 
+                //TO DO : check if input not Null
 
                 if (!isNaN(date.valueOf())) { // valid?
                     calendar.addEvent({
