before mail server

--- a/Templates/main_page.html
+++ b/Templates/main_page.html
@@ -22,7 +22,7 @@
           <div class="dropdown-content">
             <a href="/motivation/{{user_id}}">Motivation</a>
             <a href="#">Personal difficulty</a>
-            <a href="#">Completion</a>
+            <a href="/workout_completion/{{user_id}}">Completion</a>
             <a href="/workout_types/{{user_id}}">Workout type</a>
             <a href="/total_workout_time/{{user_id}}">Total workout time</a>
           </div>
