--- a/Templates/total_workout_time.html
+++ b/Templates/total_workout_time.html
@@ -17,57 +17,28 @@
             var pieChart = new Chart(ctx, {
                 type: "bar",
                 data:{
-                    labels:{{labels1| safe}},
+                    labels:{{labels| safe}},
                     datasets:[{
                         label:"Total workout time",
-                        data: {{values1|safe}},
+                        data: {{values|safe}},
                         //fill: false,
                         backgroundColor: [
-                          'rgba(255, 99, 132, 0.2)',
-                          'rgba(255, 159, 64, 0.2)',
-                          'rgba(255, 205, 86, 0.2)',
-                          'rgba(75, 192, 192, 0.2)',
-                          'rgba(54, 162, 235, 0.2)',
-                          'rgba(153, 102, 255, 0.2)',
-                          'rgba(201, 203, 207, 0.2)'
+                          'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
+                          'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
+                          'rgb(255, 99, 132)', 'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
+                          'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
+                          'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
+                          'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
+                          'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)', 'rgb(255, 99, 132)',
+                            'rgb(255, 99, 132)','rgb(255, 99, 132)','rgb(255, 99, 132)',
                         ],
-                        borderColor: [
-                          'rgb(255, 99, 132)',
-                          'rgb(255, 159, 64)',
-                          'rgb(255, 205, 86)',
-                          'rgb(75, 192, 192)',
-                          'rgb(54, 162, 235)',
-                          'rgb(153, 102, 255)',
-                          'rgb(201, 203, 207)'
-                        ],
-                        borderWidth: 2
+                        borderWidth: 3,
                             }]
-                    }
+                    },
                 });
         </script>
     </div>
     <br><br><br>
     <caption><h2> {{notice}} </h2></caption>
-    <br>
-    <div id="total_week_time">
-        <canvas id="total_workout_week_time" width="200" height="100"></canvas>
-        <script>
-            var ctx = document.getElementById("total_workout_week_time").getContext("2d");
-            var pieChart = new Chart(ctx, {
-                type: "pie",
-                data:{
-                    labels:["Total workout hours","Total Not working-out hours"],
-                    datasets:[{
-                        label:"Workout total time",
-                        data: [{{total_workout_hours}},{{rest_of_week_hours}}],
-                        backgroundColor: [
-                            'rgb(255, 99, 132)',
-                            'rgb(255, 205, 86)'
-                        ],
-                            }]
-                    }
-                });
-        </script>
-    </div>
 </body>
 </html>
