--- a/Templates/welcome.html
+++ b/Templates/welcome.html
@@ -8,6 +8,7 @@
         <center>
         <H1>Please enter your details </H1>
         <br> Name <input type = "text" name= "fname" /> <br>
+        <br> Email <input type = "email" name= "email" /> <br>
         <br><br>
         <input type = "submit" value=" LogIn ">
         </center>
