--- a/static/styels/main_page.css
+++ b/static/styels/main_page.css
@@ -14,71 +14,19 @@ body {
   width: 77%;
 }
 
-
-/*
-li {
-  color: #FFF;
-  display: inline-block;
-  font-family: 'Oxygen', sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  letter-spacing: 2px;
-  margin: 0;
-  padding: 20px 18px 10px 18px;
-  text-transform: uppercase;
+.input-element{
+font-size: 100px;
+width: 400px;
 }
-*/
-
-
-/* Table */
-/*
-
-table {
-  border: 1px solid black;
-  height: 40%;
-  left: 10%;
-  margin: 20px auto;
-  overflow-y: scroll;
-  position: static;
-  width: 80%;
-  font-family: Arial, sans-serif;
-  text-align: center;
-}
-
-thead th {
-  background: #88CCF1;
-  color: #FFF;
-  font-family: 'Lato', sans-serif;
-  font-size: 16px;
-  font-weight: 100;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-tr {
-  background: #f4f7f8;
-  border-bottom: 1px solid #FFF;
-  margin-bottom: 5px;
-}
-
-th, td {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  padding: 20px;
-  font-size: 18px;
-  text-align: left;
-  width: 33.3333%;
-}
-*/
-
 
 /* Dropdown Button */
 .drop_btn {
-  background-color: #04AA6D;
+  background-color: #2C3E50;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
+  border-radius: 10px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -112,4 +60,4 @@ th, td {
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #000099;}
