delete workout button

--- a/Templates/my_schedule.html
+++ b/Templates/my_schedule.html
@@ -3,7 +3,7 @@
 <html>
 <html lang='en'>
     <head>
-        <title>Weekly Schedule</title>
+        <title>Your Schedule</title>
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.css"  />
          <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.js"></script>
     </head>
